--- a/src/test/resources/header.html
+++ b/src/test/resources/header.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<title>Diff</title>
 		
-		<link href="${cssPath}">
+		<link href="css/style.css" rel="stylesheet" type="text/css">
 	</head>
 	
 	<body>
