Template system instead of header-footer rubbish, English comments

--- a/src/test/resources/layout.html
+++ b/src/test/resources/layout.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<title>${title)</title>
 		<meta charset="utf-8">
-		<title>${title}</title>
 		
 		<link href="${cssPath}" rel="stylesheet" type="text/css">
 	</head>
 	
 	<body>
-		<#list diff as line> 
-			${line}
-		</#list>
+		${diff}
 	</body>
 </html>
