--- a/src/test/resources/layout.html
+++ b/src/test/resources/layout.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>${title)</title>
+		<title>Diff View</title>
 		<meta charset="utf-8">
 		
-		<link href="${cssPath}" rel="stylesheet" type="text/css">
+		<link href="css/style.css" rel="stylesheet">
 	</head>
 	
 	<body>
