--- a/src/test/resources/layout.html
+++ b/src/test/resources/layout.html
@@ -1,3 +1,13 @@
-<#list diff as line>
-	${line}
-</#list>
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Diff View</title>
+		<meta charset="utf-8">
+		
+		<link href="css/style.css" rel="stylesheet">
+	</head>
+	
+	<body>
+		${diff}
+	</body>
+</html>
