--- a/src/test/resources/inner_layout.html
+++ b/src/test/resources/inner_layout.html
@@ -4,22 +4,26 @@
 		<title>Diff View</title>
 		<meta charset="utf-8">
 		
-		<link href="css/style.css" rel="stylesheet">
+		<#if filename?contains("/")>
+			<link href="../css/style.css" rel="stylesheet">
+		<#else>
+			<link href="css/style.css" rel="stylesheet">
+		</#if>
 	</head>
 	
 	<body>
 		<table>
 			<#list diff?keys as key>
-				<#if diff[key].name() == "SAME">
+				<#if diff[key] == "SAME">
 			    	<tr><td class="same">${key}</td></tr>
-			    <#elseif diff[key].name() == "DELETED">
+			    <#elseif diff[key] == "DELETED">
 			    	<tr><td class="deleted">${key}</td></tr>
-				<#elseif diff[key].name() == "ADDED">
+				<#elseif diff[key] == "ADDED">
 					<tr><td class="added">${key}</td></tr>
-				<#elseif diff[key].name() == "RENAMED">
+				<#elseif diff[key] == "RENAMED">
 					<tr><td class="renamed">${key} (RENAMED)</td></tr>
-				<#elseif diff[key].name() == "PREPARED">
-					<tr><td class="same">${key} - <a href="${key}-diff.html" target="_blank">DIFF</a></td></tr>
+				<#else>
+					<tr><td class="hidden"><pre>${diff[key]}</pre></td></tr>
 				</#if>
 			</#list>
 		</table>
